# smart_home

./: auslesen.py  docker-compose.yml  dockerfile  init.sql  main.py  pyproject.toml
dashboards/: cat_target_drift.json  data_drift.json  metric_dashboard.json  metric_numerical.json  metrics_categorical.json  metrics_numerical.json  num_target_drift.json  regression_performance.json
