[tool.poetry]
name = "smart-home"
version = "0.1.0"
description = ""
authors = ["seb <sebbel2704@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
apscheduler = "^3.11.0"
psycopg2 = "^2.9.10"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
